1. The dashboard now supports toggling between dark and light themes. 2. Replaced dashboard cards use of svg file with an embedded version for more styling control. 3. Some dashboard layout bug fixes.

--- a/index-styles.css
+++ b/index-styles.css
@@ -1,10 +1,21 @@
 ﻿:root {
     --i-radius: 20px;
     --image-border-radius: var(--i-radius) var(--i-radius) var(--i-radius) 60px;
+    --whole-page-margin: 50px;
+    --font-color: #eaeaea;
+    --card-max-width: 400px;
+}
+
+[data-theme="dark"] {
+    --bg-color: linear-gradient(109.6deg, rgb(63, 46, 114) 11.2%, rgb(77, 22, 119) 32.6%, rgb(102, 28, 112) 62.7%, rgb(114, 63, 24) 100.2%);
+    --glass-color: rgba(28, 28, 28, 0.5);
+    --main-color: rgba(0, 0, 0, 0.75);
+}
+
+[data-theme="light"] {
+    --bg-color: linear-gradient(109.6deg, rgb(123, 90, 224) 11.2%, rgb(164, 46, 253) 32.6%, rgb(213, 56, 234) 62.7%, rgb(251, 138, 52) 100.2%);
     --glass-color: rgba(95, 62, 97, 0.5);
     --main-color: rgba(0, 0, 0, 0.75);
-    --font-color: #eaeaea;
-    --whole-page-margin: 50px;
 }
 
 html {
@@ -16,7 +27,30 @@ html {
 
 body {
     margin: 0;
-    background: linear-gradient(109.6deg, rgb(123, 90, 224) 11.2%, rgb(164, 46, 253) 32.6%, rgb(213, 56, 234) 62.7%, rgb(251, 138, 52) 100.2%);
+    background: var(--bg-color);
+}
+
+button {
+    color: var(--main-color);
+    border: 0;
+    border-radius: 50px;
+    font-size: 16px;
+    padding: 12px;
+    height: 42px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    background-color: var(--font-color);
+    font-family: inherit;
+}
+
+.button:hover {
+    background-color: #c5c5c5;
+}
+
+.button:active {
+    background-color: #818181;
 }
 
 .header {
@@ -29,10 +63,16 @@ body {
     min-height: 60px;
 }
 
-.header-links {
-    width: 75%;
+.mobile-header {
     display: flex;
-    justify-content: space-around;
+    align-items: center;
+}
+
+.header-links {
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .header-link {
@@ -42,18 +82,22 @@ body {
     text-decoration: none;
 }
 
-.hamburger {
-    color: rgb(110, 73, 149);
+.circularBtn {
+    color: var(--main-color);
     border: 0;
     border-radius: 500px;
     font-size: 16px;
     width: 42px;
     height: 42px;
-    display: none;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
     background-color: var(--font-color);
+}
+
+#hamburgerBtn {
+    display: none;
 }
 
 @media all and (max-width: 800px) {
@@ -71,12 +115,17 @@ body {
         width: 100%;
     }
 
-    .hamburger {
+    #hamburgerBtn {
         display: flex;
     }
 
-    .header-links {
+    #themeToggle {
+        align-self: flex-end;
+        margin-top: 50px;
+    }
 
+    .header-links {
+        width: 100%;
         margin-top: 15px;
         flex-direction: column;
         align-items: center;
@@ -90,12 +139,27 @@ body {
     }
 }
 
-.hamburger:hover {
+/*Dont reorder the next 2 styles.*/
+.circularBtn:hover {
     background-color: #c5c5c5;
 }
 
-.hamburger:active {
+.circularBtn:active {
     background-color: #818181;
+}
+
+#themeToggle {
+    background-color: transparent;
+    color: var(--font-color);
+    font-size: 19px;
+}
+
+#themeToggle:hover {
+    background-color: rgb(70, 70, 70);
+}
+
+#themeToggle:active {
+    background-color: var(--glass-color);
 }
 
 .bio-container {
@@ -143,13 +207,14 @@ body {
     align-items: center;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 25px;
+    gap: var(--whole-page-margin);
     width: 90%;
 }
 
 .card {
-    border-radius: 35px;
+    border-radius: 25px;
     cursor: pointer;
+    overflow: hidden;
 }
 
 .card:hover > .card-image-container > .card-image {
@@ -158,7 +223,7 @@ body {
 
 .card-image {
     width: 100%;
-    max-width: 400px;
+    max-width: var(--card-max-width);
     border-radius: var(--image-border-radius);
     transition: transform 0.25s, background 2s;
 }
@@ -169,14 +234,14 @@ body {
 }
 
 .card-title {
-    margin-top: 70px;
+    margin-top: 40px;
     margin-bottom: 5px;
-    margin-left: 10px;
+    margin-left: 20px;
 }
 
 .card-desc {
-    margin-bottom: 10px;
-    margin-left: 10px;
+    margin: 22px;
+    margin-top: 5px;
 }
 
 .card-cta {
@@ -188,9 +253,8 @@ body {
     backdrop-filter: blur(10px);
     color: inherit;
     padding: 13px;
-    border-radius: 17px;
-    text-indent: 15px;
-    margin-top: 23px;
+    border-radius: 18px;
+    margin: 10px;
     text-align: center;
     overflow: hidden;
 }
@@ -215,15 +279,17 @@ body {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding: 10px;
     --radius: 20px;
-    border-radius: 0 var(--radius) var(--radius) var(--radius);
-    background-image: url("images/index-card-body.svg");
-    background-repeat: no-repeat;
-    background-size: cover;
     position: relative;
-    top: -50px;
-    max-width: 381px;
+    max-width: var(--card-max-width);
+}
+
+.card-lower-part svg {
+    fill: var(--glass-color);
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    top: -32px;
 }
 
 .footer {
@@ -270,3 +336,5 @@ body {
         padding-bottom: 15px;
     }
 }
+
+
